--- a/认识游戏.wiki
+++ b/认识游戏.wiki
@@ -6,6 +6,7 @@
 * [[认识游戏]]
 * [[游戏建筑]]
 * [[游戏舰船]]
+* [[游戏科技]]
 * [[星球/月球]]
 * [[探险]]
 * [[氪晶系统]]
@@ -40,6 +41,11 @@
 |          | 能量     | 太阳能发电站、核电站、太阳能卫星 | 能量能广泛用于支撑玩家星球上建筑的各项功能，包括资源产出、预警雷达等。 |
 
 能量是支撑建筑正常运转必不可少的资源。
+{{{
+太阳能卫星产生能量值为:取最大值((星球最高温/4)+20,1)
+}}}
+
+<br>
 
 `资源生产效率`
 {{{class: "brush:php"
